
New Features
************

* If the Apport crash-reporting tool is available, bzr crashes are now
  stored into the ``/var/crash`` apport spool directory, and the user is
  invited to report them to the developers from there, either
  automatically or by running ``apport-bug``.  No information is sent
  without specific permission from the user.  (Martin Pool, #515052)

Testing
*******

* Don't use Apport for errors while loading or running tests.
  (Martin Pool, #417881)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.0 (not released yet)
############################

:Codename: 
:2.1.0: 

Bug Fixes
*********

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

* Fix ``log`` to better check ancestors even if merged revisions are involved.
  (Vincent Ladeuil, #476293)

* Set the mtime of files exported to a directory by ``bzr export`` all to
  the same value to avoid confusing ``make`` and other date-based build
  systems. (Robert Collins, #515631)

Improvements
************

Documentation
*************

API Changes
***********

* ``Repository.deserialise_inventory`` has been renamed to 
  ``Repository._deserialise_inventory`` to indicate it is private.
  (Jelmer Vernooij)

* ``Repository.get_inventory_xml`` has been renamed to 
  ``Repository._get_inventory_xml`` to indicate it is private. 
  (Jelmer Vernooij)

* ``Repository.serialise_inventory`` has been renamed to 
  ``Repository._serialise_inventory`` to indicate it is private.

Internals
*********

Testing
*******
* Using the ``bzrlib.chk_map`` module from within multiple threads at the
  same time was broken due to race conditions with a module level page
  cache. This shows up as a KeyError in the ``bzrlib.lru_cache`` code with
  ``bzrlib.chk_map`` in the backtrace, and can be triggered without using
  the same high level objects such as ``bzrlib.repository.Repository``