@@ -25,6 +25,12 @@ New Features
   automatically or by running ``apport-bug``.  No information is sent
   without specific permission from the user.  (Martin Pool, #515052)
 
+Bug Fixes
+*********
+
+* Avoid infinite recursion when probing for apport.
+  (Vincent Ladeuil, #516934)
+
 Testing
 *******
 
